--- a/crud-csharp-sqlserver/crud-csharp-sqlserver.csproj
+++ b/crud-csharp-sqlserver/crud-csharp-sqlserver.csproj
@@ -1,18 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp6.0</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-   
+  <ItemGroup>&#xD;
+   &#xD;
   </ItemGroup>
-
   <ItemGroup>
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0"/>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5"/>
+    <PackageReference Include="NBuilder" Version="6.1.0"/>
   </ItemGroup>
- 
-
 </Project>
